Fix UX bug on mobile

--- a/src/components/WatchMovie/VideoPlayer/VideoPlayer.module.css
+++ b/src/components/WatchMovie/VideoPlayer/VideoPlayer.module.css
@@ -4,6 +4,12 @@
     height: 100%;
 }
 
+.wrapper video {
+    width: 100%;
+    height: 30vh;
+    object-fit: contain;
+}
+
 .wrapper:fullscreen {
     width: 100vw;
     height: 100vh;
@@ -62,5 +68,9 @@
         height: 100px;
         transform: translate(-50%, -65%);
         font-size: 40px;
+    }
+
+    .wrapper video {
+        height: 100%;
     }
 }
